[package]
name = "blocks_world_expr"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhop = {git = "https://github.com/gjf2a/anyhop"}
blocks_world = {git = "https://github.com/gjf2a/blocks_world"}
simple_logger = "1.6.0"
log = "0.4.11"